# ebbrt-contrib

apps/: Makefile  generate.py
apps/counter/: CMakeLists.txt
apps/counter/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/counter/Debug/bm/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/counter/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/counter/Release/bm/: CopyOfCMakeCache.txt  Makefile  cmake_install.cmake
apps/counter/src/: Counter.cc  Counter.cc.back  Counter.cc~  Counter.h  Counter.h.back  Counter.h~  MulticoreCounter.cc  MulticoreCounter.cc~  MulticoreCounter.h  MulticoreCounter.h~  MulticoreEbb.h  MulticoreEbb.h~  StaticEbbIds.h
apps/counter/src/baremetal/: Printer.cc  helloworld.cc  helloworld.cc~
apps/counter/src/hosted/: Printer.cc  helloworld.cc  helloworld.cc~
apps/helloworld/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/helloworld/Debug/bm/: CMakeCache.txt  CopyOfCMakeCache.txt  Makefile  cmake_install.cmake
apps/helloworld/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/helloworld/Release/bm/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/helloworld/src/baremetal/: helloworld.cc
apps/helloworld/src/hosted/: helloworld.cc
apps/memmap/hosted/src/: Printer.h  (+1 more)
apps/memmap/src/: StaticEbbIds.h
apps/nodeconnect/src/: StaticEbbIds.h
apps/sharedmem/: CMakeLists.txt  CMakeLists.txt~  Makefile
apps/sharedmem/src/: Membership.cc  Membership.h  RemoteMem.cc  RemoteMem.cc~  RemoteMem.h  RemoteMem.h~  StaticEbbIds.h  StaticEbbIds.h~  pageFaultHandle.h  pageFaultHandle.h~  sharedmem.h  sharedmem.h~
apps/sharedmem/src/baremetal/: Printer.h  ebbrtcfg.h  sharedmem.cc  sharedmem.cc~
apps/sharedmem/src/hosted/: Printer.cc  Printer.h  sharedmem.cc  sharedmem.cc~
(+27 files in other folders)
